Add docker-compose files

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,13 @@
+### PhpStorm setings
+.idea/
+*.iml
 
 ###> symfony/framework-bundle ###
 /.env.local
 /.env.local.php
 /.env.*.local
 /.env
+/.env.dev
 /config/secrets/prod/prod.decrypt.private.php
 /public/bundles/
 /var/
