--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,22 +3,31 @@
 ###############################################################################
 
 services:
-    mysql:
-        container_name: laravel-mysql
-        image: 'mysql:8.0'
-        volumes:
-            - 'mysql_data:/var/lib/mysql'
+    postgres:
+        container_name: urls-db
+        image: postgres:16
         environment:
-            - MYSQL_ROOT_PASSWORD=${MYSQL_ROOT_PASSWORD}
-            - MYSQL_DATABASE=${DB_DATABASE}
-            - MYSQL_USER=${DB_USERNAME}
-            - MYSQL_PASSWORD=${DB_PASSWORD}
+            POSTGRES_PASSWORD: ${POSTGRES_ROOT_PASSWORD}
+            POSTGRES_USER: ${POSTGRES_USERNAME}wda
+            POSTGRES_DB: ${POSTGRES_DATABASE}
         ports:
-            - '55002:3306'
+            - '57002:3306'
+        volumes:
+            - postgres_data:/var/lib/postgresql/data
         restart: unless-stopped
 
+    pgadmin:
+        image: dpage/pgadmin4
+        ports:
+            - "57003:80"
+        environment:
+            PGADMIN_DEFAULT_EMAIL: admin@example.com
+            PGADMIN_DEFAULT_PASSWORD: admin
+        depends_on:
+            - postgres
+
     webserver:
-        container_name: laravel-server
+        container_name: urls-server
         image: 'nginx:alpine'
         working_dir: /application
         volumes:
@@ -27,11 +36,11 @@ services:
         depends_on:
             - php-fpm
         ports:
-            - '55000:80'
+            - '57000:80'
         restart: unless-stopped
 
     php-fpm:
-        container_name: php-fpm
+        container_name:  php-fpm
         build:
             context: .
             dockerfile: docker/php-fpm/Dockerfile
@@ -39,21 +48,8 @@ services:
         volumes:
             - ./:/application
         depends_on:
-            - mysql
-        restart: unless-stopped
-
-    phpmyadmin:
-        image: phpmyadmin/phpmyadmin
-        container_name: php-my-admin
-        depends_on:
-            - mysql
-        environment:
-            - MYSQL_ROOT_PASSWORD=${MYSQL_ROOT_PASSWORD}
-            - PMA_HOST=mysql
-            - PMA_PORT=3306
-        ports:
-            - '55003:80'
+            - postgres
         restart: unless-stopped
 
 volumes:
-    mysql_data:
+    postgres_data:
