Fixes for postgreSQL container

--- a/docker/php-fpm/Dockerfile
+++ b/docker/php-fpm/Dockerfile
@@ -1,8 +1,8 @@
-FROM phpdockerio/php:8.4-fpm
-WORKDIR "/application"
+FROM php:8.4-fpm
 
-RUN apt-get update; \
-    apt-get -y --no-install-recommends install \
-        php8.2-mysql; \
-    apt-get clean; \
-    rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/* /usr/share/doc/*
+WORKDIR /application
+
+RUN apt-get update && apt-get install -y \
+    libpq-dev \
+    postgresql-client \
+    && docker-php-ext-install pdo pdo_pgsql
