--- a/.env.example
+++ b/.env.example
@@ -20,5 +20,5 @@ DEFAULT_URI=http://localhost
 ###< symfony/routing ###
 
 ###> doctrine/doctrine-bundle ###
-DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=16&charset=utf8"
+DATABASE_URL="postgresql://app_user:app_password@postgres:5432/postgre_php?serverVersion=16&charset=utf8"
 ###< doctrine/doctrine-bundle ###
