--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,10 +8,10 @@ services:
         image: postgres:16
         environment:
             POSTGRES_PASSWORD: ${POSTGRES_ROOT_PASSWORD}
-            POSTGRES_USER: ${POSTGRES_USERNAME}wda
+            POSTGRES_USER: ${POSTGRES_USERNAME}
             POSTGRES_DB: ${POSTGRES_DATABASE}
         ports:
-            - '57002:3306'
+            - '57002:5432'
         volumes:
             - postgres_data:/var/lib/postgresql/data
         restart: unless-stopped
