--- a/backend/config/packages/cache.yaml
+++ b/backend/config/packages/cache.yaml
@@ -14,6 +14,6 @@ framework:
         # APCu (not recommended with heavy random-write workloads as memory fragmentation can cause perf issues)
         #app: cache.adapter.apcu
 
-        # Namespaced pools use the above "app" backend by default
+        # Namespaced pools use the above "app" symfony by default
         #pools:
             #my.dedicated.cache: null
