--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,8 @@ services:
     postgres:
         container_name: urls-db
         image: postgres:16
+        env_file:
+          - /backend/.env
         environment:
             POSTGRES_PASSWORD: ${POSTGRES_ROOT_PASSWORD}
             POSTGRES_USER: ${POSTGRES_USERNAME}
@@ -25,13 +27,14 @@ services:
             PGADMIN_DEFAULT_PASSWORD: admin
         depends_on:
             - postgres
+        restart: unless-stopped
 
     webserver:
         container_name: urls-server
         image: 'nginx:alpine'
-        working_dir: /application
+        working_dir: /application/backend
         volumes:
-            - './public:/application/public'
+            - './backend/public:/application/backend/public'
             - './docker/nginx/nginx.conf:/etc/nginx/conf.d/default.conf'
         depends_on:
             - php-fpm
@@ -44,9 +47,9 @@ services:
         build:
             context: .
             dockerfile: docker/php-fpm/Dockerfile
-        working_dir: /application
+        working_dir: /application/backend
         volumes:
-            - ./:/application
+            - ./backend:/application/backend
         depends_on:
             - postgres
         restart: unless-stopped
@@ -57,15 +60,16 @@ services:
         ports:
             - "5672:5672"    # AMQP
             - "15672:15672"  # Web UI
+        restart: unless-stopped
 
     worker:
         container_name: urls-worker
         build:
             context: .
             dockerfile: docker/php-fpm/Dockerfile
-        working_dir: /application
+        working_dir: /application/backend
         volumes:
-            - ./:/application
+          - ./backend:/application/backend
         command: >
             php bin/console messenger:consume async
         depends_on:
@@ -73,5 +77,19 @@ services:
             - postgres
         restart: unless-stopped
 
+    nextjs:
+      container_name: next-js
+      build:
+        context: ./
+        dockerfile: docker/next-js/Dockerfile
+      working_dir: /application/frontend
+      volumes:
+        - ./frontend:/application/frontend
+      ports:
+        - "3000:3000"
+      command: npm run dev
+      depends_on:
+        - php-fpm
+      restart: unless-stopped
 volumes:
     postgres_data:
