--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -1,29 +1,23 @@
 server {
-    listen 80 default;
+    listen 80 default_server;
+    server_name _;
 
     client_max_body_size 108M;
 
     access_log /var/log/nginx/application.access.log;
 
-    root /application/public;
+    root /application/backend/public;
     index index.php;
 
-    # try to serve file directly, fallback to index.php
     location / {
-        try_files $uri /index.php$is_args$args;
-    }
-
-    if (!-e $request_filename) {
-        rewrite ^.*$ /index.php last;
+        try_files $uri /index.php?$query_string;
     }
 
     location ~ \.php$ {
+        include fastcgi_params;
         fastcgi_pass php-fpm:9000;
         fastcgi_index index.php;
-        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-        fastcgi_param PHP_VALUE "error_log=/var/log/nginx/application_php_errors.log";
-        fastcgi_buffers 16 16k;
-        fastcgi_buffer_size 32k;
-        include fastcgi_params;
+        fastcgi_param SCRIPT_FILENAME $realpath_root$fastcgi_script_name;
+        fastcgi_param DOCUMENT_ROOT $realpath_root;
     }
 }
