Add first 2 api to frontend. Fixed CORS issues.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -85,9 +85,9 @@ services:
       working_dir: /application/frontend
       volumes:
         - ./frontend:/application/frontend
+        - /application/frontend/node_modules
       ports:
         - "3000:3000"
-      command: npm run dev
       depends_on:
         - php-fpm
       restart: unless-stopped
