--- a/backend/composer.json
+++ b/backend/composer.json
@@ -13,6 +13,7 @@
         "doctrine/doctrine-migrations-bundle": "^4.0",
         "doctrine/orm": "^3.6",
         "firebase/php-jwt": "^7.0",
+        "nelmio/cors-bundle": "^2.6",
         "phpdocumentor/reflection-docblock": "^6.0",
         "phpstan/phpdoc-parser": "^2.3",
         "symfony/amqp-messenger": "8.0.*",
