--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -1,23 +1,54 @@
 server {
     listen 80 default_server;
-    server_name _;
+    server_name localhost;
 
     client_max_body_size 108M;
 
     access_log /var/log/nginx/application.access.log;
 
     root /application/backend/public;
-    index index.php;
+    index index.php index.html;
 
     location / {
-        try_files $uri /index.php?$query_string;
+        proxy_pass http://next-js:3000;
+        proxy_http_version 1.1;
+
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+        proxy_set_header Host $host;
+        proxy_cache_bypass $http_upgrade;
     }
 
-    location ~ \.php$ {
+    location ~ ^/api/.*\.php$ {
+        root /application/backend/public;
+        try_files $uri /index.php$is_args$args;
+
         include fastcgi_params;
         fastcgi_pass php-fpm:9000;
-        fastcgi_index index.php;
-        fastcgi_param SCRIPT_FILENAME $realpath_root$fastcgi_script_name;
-        fastcgi_param DOCUMENT_ROOT $realpath_root;
+        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
     }
+
+        location /api/ {
+            if ($request_method = OPTIONS) {
+                add_header 'Access-Control-Allow-Origin' 'http://localhost:3000';
+                add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS';
+                add_header 'Access-Control-Allow-Headers' 'Authorization,Content-Type';
+                add_header 'Content-Length' 0;
+                add_header 'Content-Type' 'text/plain charset=UTF-8';
+                return 204;
+            }
+
+            add_header 'Access-Control-Allow-Origin' 'http://localhost:3000';
+            add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS';
+            add_header 'Access-Control-Allow-Headers' 'Authorization,Content-Type';
+
+            try_files $uri /index.php$is_args$args;
+        }
+
+        location ~ \.php$ {
+            include fastcgi_params;
+            fastcgi_pass backend:9000;
+            fastcgi_param SCRIPT_FILENAME /app/public/index.php;
+            fastcgi_param HTTP_AUTHORIZATION $http_authorization;
+        }
 }
